# hash-service

./: .trivyignore.yaml  CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml
Docker/: Dockerfile
Documentation/: QuickStart.md  Releases.md  Supplemental.md  SupplyChainMapping.md
cpp/: CMakeLists.txt  cli_lib.cpp  cli_lib.h  cpp.cpp
cpp/tests/: cli_tests.cpp
kubernetes/: deployment.yml
security_compliance/clang-tidy/: .clang-tidy
security_compliance/policy/: security.rego
service/: .bandit  .env.example  main.py  requirements.txt
service/tests/: test_hash_endpoint.py
